[gd_scene load_steps=7 format=4 uid="uid://s5q25xmlpgkb"]

[ext_resource type="TileSet" uid="uid://bp6wnft36y6he" path="res://tile_set.tres" id="1_7ohts"]
[ext_resource type="Script" path="res://map.gd" id="1_emmlx"]
[ext_resource type="PackedScene" uid="uid://d1xlpsaxhipac" path="res://fan.tscn" id="2_7s8dj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i6qkq"]
size = Vector2(8, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sacd2"]
size = Vector2(128, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ju3c"]
size = Vector2(348, 119)

[node name="Map" type="Node2D"]
script = ExtResource("1_emmlx")

[node name="Fan" parent="." instance=ExtResource("2_7s8dj")]
position = Vector2(-237, -203)

[node name="EndPoint" type="Marker2D" parent="." groups=["EndPoint"]]
position = Vector2(-384, -98)

[node name="StartPoint" type="Marker2D" parent="." groups=["StartPoint"]]
position = Vector2(-424, 96)

[node name="Background" type="TileMapLayer" parent="."]
position = Vector2(-2, 0)
tile_map_data = PackedByteArray("AADn/wUAAQAEAAAAAAA=")
tile_set = ExtResource("1_7ohts")

[node name="StartZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartZone"]
position = Vector2(-360, 64)
shape = SubResource("RectangleShape2D_i6qkq")

[node name="ColorRect" type="ColorRect" parent="StartZone"]
visible = false
offset_left = -364.0
offset_right = -356.0
offset_bottom = 128.0
color = Color(0.372549, 0.803922, 0.894118, 0.392157)

[node name="EndZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndZone"]
position = Vector2(-386, -167)
shape = SubResource("RectangleShape2D_sacd2")

[node name="ColorRect" type="ColorRect" parent="EndZone"]
visible = false
offset_left = -450.0
offset_top = -171.0
offset_right = -322.0
offset_bottom = -163.0
color = Color(0.372549, 0.803922, 0.894118, 0.392157)

[node name="Terrain" type="TileMapLayer" parent="."]
z_index = 2
tile_map_data = PackedByteArray("AAADAP//AAABAAIAAAADAP7/AAABAAIAAAD8////AAADAAIAAAD8//7/AAADAAIAAAD8//3/AAAEAAAAAAD7//3/AAACAAEAAAD6//3/AAAEAAEAAAD5//3/AAACAAIAAAD5//7/AAACAAIAAAD5////AAACAAIAAAD7////AAACAAIAAAD7//7/AAACAAIAAAD6//7/AAACAAIAAAD6////AAACAAIAAAADAP3/AAABAAIAAAAEAP3/AAACAAIAAAAFAP3/AAACAAIAAAAGAP3/AAACAAIAAAAGAP7/AAACAAIAAAAGAP//AAACAAIAAAAEAP//AAACAAIAAAAEAP7/AAACAAIAAAAFAP7/AAACAAIAAAAFAP//AAACAAIAAAD6//z/AAADAAIAAAD6//v/AAADAAIAAAD6//r/AAADAAIAAAD6//n/AAADAAIAAAD6//j/AAADAAEAAAD5//j/AAACAAEAAAD5//n/AAACAAIAAAD5//r/AAACAAIAAAD5//v/AAACAAIAAAD5//z/AAACAAIAAAD///b/AAABAAEAAAD///f/AAABAAMAAAAAAPf/AAACAAMAAAABAPf/AAACAAMAAAACAPf/AAADAAMAAAACAPb/AAAEAAAAAAABAPb/AAACAAEAAAAAAPb/AAACAAEAAAAHAPz/AAACAAIAAAAHAP3/AAACAAIAAAAHAP7/AAACAAIAAAAIAP7/AAADAAIAAAAIAP3/AAADAAIAAAAIAPz/AAADAAIAAAAIAPv/AAADAAIAAAAIAPr/AAADAAIAAAAIAPn/AAADAAIAAAAIAPj/AAADAAIAAAAHAPj/AAABAAIAAAAHAPf/AAABAAIAAAAHAPb/AAABAAIAAAAHAPX/AAABAAIAAAAIAPX/AAADAAIAAAAIAPb/AAADAAIAAAAIAPf/AAADAAIAAAAHAPv/AAACAAIAAAAHAPr/AAABAAIAAAAHAPn/AAABAAIAAAAHAPT/AAABAAIAAAAIAPT/AAADAAIAAAAHAPL/AAACAAIAAAAHAPP/AAABAAIAAAAIAPP/AAADAAIAAAAIAPL/AAADAAIAAAACAPH/AAABAAMAAAADAPH/AAACAAMAAAAEAPH/AAACAAMAAAAFAPH/AAACAAMAAAAGAPH/AAACAAMAAAAHAPH/AAACAAIAAAAIAPH/AAADAAIAAAAIAPD/AAADAAIAAAAHAPD/AAAFAAEAAAAGAPD/AAACAAEAAAAFAPD/AAACAAEAAAAEAPD/AAACAAEAAAADAPD/AAACAAEAAAACAPD/AAABAAEAAAD4//j/AAACAAEAAAD3//j/AAACAAEAAAD3//n/AAABAAIAAAD4//n/AAACAAIAAAAHAO//AAABAAIAAAAHAO7/AAABAAIAAAAHAO3/AAABAAIAAAAHAOz/AAABAAIAAAAIAOz/AAADAAIAAAAIAOv/AAADAAIAAAAIAO3/AAADAAIAAAAIAO7/AAADAAIAAAAIAO//AAADAAIAAAAHAOv/AAABAAIAAAAIAOr/AAADAAIAAAAHAOr/AAABAAIAAAAHAOn/AAABAAIAAAAIAOn/AAADAAIAAAAIAOj/AAADAAIAAAAHAOj/AAABAAIAAAD4/+n/AAACAAMAAAD3/+n/AAACAAMAAAD3/+j/AAACAAIAAAAHAOf/AAABAAIAAAAIAOf/AAADAAIAAAD3//r/AAACAAIAAAD3//v/AAACAAIAAAD4//v/AAACAAIAAAD4//z/AAACAAIAAAD4//3/AAACAAIAAAD4//7/AAACAAIAAAD4////AAACAAIAAAD3////AAACAAIAAAD3//7/AAACAAIAAAD3//3/AAACAAIAAAD3//z/AAACAAIAAAD4//r/AAACAAIAAAAHAP//AAACAAIAAAAIAP//AAADAAIAAAD6//H/AAADAAIAAAD6//L/AAADAAIAAAD6//P/AAADAAIAAAD6//T/AAADAAMAAAD5//H/AAABAAIAAAD5//L/AAABAAIAAAD5//P/AAABAAIAAAD5//T/AAABAAMAAAD0//H/AAADAAIAAAD0//L/AAADAAIAAAD0//P/AAADAAIAAAD0//T/AAADAAIAAAD0//X/AAADAAIAAAD0//b/AAADAAIAAAD0//f/AAADAAIAAAD0//j/AAAEAAEAAAD1//j/AAACAAEAAAD2//j/AAACAAEAAAD2//n/AAADAAIAAAD1//n/AAACAAIAAAD0//n/AAACAAIAAADz//n/AAABAAIAAADz//j/AAABAAIAAADz//f/AAABAAIAAADz//b/AAABAAIAAADz//X/AAABAAIAAADz//T/AAABAAIAAADz//P/AAABAAIAAADz//L/AAABAAIAAADz//H/AAABAAIAAADz//D/AAABAAIAAADz/+//AAACAAIAAADz/+7/AAACAAIAAADz/+3/AAACAAIAAAD0/+3/AAADAAIAAAD0/+z/AAADAAIAAADz/+z/AAACAAIAAAD0/+7/AAADAAIAAAD0/+//AAADAAIAAAD0//D/AAADAAIAAAAHAOb/AAABAAIAAAAIAOb/AAADAAIAAAD6//D/AAADAAIAAAD5//D/AAABAAIAAAD5/+//AAABAAIAAAD6/+//AAADAAIAAAD5/+7/AAABAAEAAAD6/+7/AAAEAAAAAAD6/+n/AAACAAMAAAD7/+n/AAACAAMAAAD8/+n/AAACAAMAAAD9/+n/AAACAAMAAAD+/+n/AAACAAMAAAD//+n/AAADAAMAAAD//+j/AAADAAEAAAD+/+j/AAACAAEAAAD9/+j/AAACAAEAAAD8/+j/AAACAAEAAAD7/+j/AAACAAEAAAD6/+j/AAACAAEAAAAHAOX/AAABAAIAAAAHAOT/AAABAAIAAAAHAOP/AAACAAIAAAAIAOL/AAADAAEAAAAIAOP/AAADAAIAAAAIAOT/AAADAAIAAAAIAOX/AAADAAIAAAAHAOL/AAACAAEAAAD9/+P/AAACAAIAAAD+/+P/AAACAAMAAAD//+P/AAACAAMAAAAAAOP/AAACAAMAAAABAOP/AAACAAMAAAACAOP/AAACAAMAAAADAOP/AAACAAMAAAAEAOP/AAACAAMAAAAFAOP/AAACAAMAAAAGAOP/AAACAAMAAAAGAOL/AAACAAEAAAAFAOL/AAACAAEAAAAEAOL/AAACAAEAAAADAOL/AAACAAEAAAACAOL/AAACAAEAAAD8/+P/AAABAAIAAAD8/+L/AAABAAIAAAD9/+L/AAAEAAEAAAD+/+L/AAACAAEAAAD//+L/AAACAAEAAAAAAOL/AAACAAEAAAABAOL/AAACAAEAAAD2/+P/AAACAAIAAAD3/+L/AAACAAEAAAD2/+L/AAACAAEAAAD2/+j/AAACAAIAAAD2/+n/AAACAAMAAAD1/+n/AAACAAMAAAD0/+n/AAACAAIAAADz/+n/AAACAAIAAADz/+r/AAACAAIAAADz/+v/AAACAAIAAAD0/+v/AAADAAIAAAD0/+r/AAADAAIAAAD1/+j/AAACAAIAAAD0/+j/AAACAAIAAADz/+j/AAACAAIAAAADAPv/AAAFAAAAAAADAPz/AAABAAIAAAAEAPz/AAACAAIAAAAFAPz/AAACAAIAAAAFAPv/AAACAAEAAAAGAPv/AAACAAEAAAAEAPv/AAACAAEAAAAGAPz/AAACAAIAAAD3/wAAAAACAAIAAAD4/wAAAAACAAIAAAD5/wAAAAACAAIAAAD6/wAAAAACAAIAAAD7/wAAAAACAAIAAAD8/wAAAAADAAIAAAADAAAAAAABAAIAAAAEAAAAAAACAAIAAAAFAAAAAAACAAIAAAAGAAAAAAACAAIAAAAHAAAAAAACAAIAAAAIAAAAAAADAAIAAAD3/+b/AAACAAIAAAD3/+f/AAACAAIAAAD3/+X/AAACAAIAAAD8/+T/AAABAAMAAAD3/+P/AAACAAIAAAD3/+T/AAACAAIAAAD4/+j/AAAEAAEAAAD5/+j/AAACAAEAAAD5/+n/AAACAAMAAAD8/9//AAABAAIAAAD8/+D/AAABAAIAAAD8/+H/AAABAAIAAAD7/97/AAACAAMAAAD6/97/AAACAAMAAAD5/97/AAACAAMAAAD4/97/AAACAAMAAAD3/97/AAACAAMAAAD2/97/AAACAAMAAAD1/97/AAACAAMAAAD1/93/AAACAAEAAAD2/93/AAACAAEAAAD3/93/AAACAAEAAAD4/93/AAACAAEAAAD5/93/AAACAAEAAAD6/93/AAACAAEAAAD7/93/AAACAAEAAAD8/93/AAACAAEAAAD8/97/AAACAAIAAAD0/93/AAACAAEAAAD0/97/AAACAAMAAAD1/+L/AAACAAEAAAD1/+P/AAACAAIAAAD1/+T/AAACAAIAAAD1/+X/AAACAAIAAAD1/+b/AAACAAIAAAD1/+f/AAACAAIAAAD2/+f/AAACAAIAAAD2/+b/AAACAAIAAAD2/+X/AAACAAIAAAD2/+T/AAACAAIAAADs/+L/AAACAAEAAADr/+L/AAACAAEAAADq/+L/AAAFAAAAAADq/+P/AAABAAIAAADq/+T/AAABAAIAAADq/+X/AAABAAIAAADq/+b/AAABAAIAAADq/+f/AAABAAIAAADr/+f/AAACAAIAAADs/+f/AAACAAIAAADs/+b/AAACAAIAAADs/+X/AAACAAIAAADs/+T/AAACAAIAAADs/+P/AAACAAIAAADr/+P/AAACAAIAAADr/+T/AAACAAIAAADr/+X/AAACAAIAAADr/+b/AAACAAIAAADv/+j/AAADAAIAAADu/+j/AAACAAIAAADt/+j/AAACAAIAAADs/+j/AAACAAIAAADr/+j/AAACAAIAAADq/+j/AAABAAIAAADq/+n/AAABAAIAAADr/+n/AAACAAIAAADs/+n/AAACAAIAAADt/+n/AAACAAIAAADu/+n/AAACAAIAAADv/+n/AAACAAIAAADz/97/AAACAAMAAADy/97/AAACAAMAAADx/97/AAACAAMAAADw/97/AAACAAMAAADv/97/AAACAAMAAADu/97/AAACAAMAAADt/97/AAACAAMAAADs/97/AAACAAMAAADr/97/AAACAAMAAADq/97/AAACAAMAAADp/97/AAACAAMAAADp/93/AAACAAEAAADq/93/AAACAAEAAADr/93/AAACAAEAAADs/93/AAACAAEAAADt/93/AAACAAEAAADu/93/AAACAAEAAADv/93/AAACAAEAAADw/93/AAACAAEAAADx/93/AAACAAEAAADy/93/AAACAAEAAADz/93/AAACAAEAAAD9/+T/AAADAAMAAAD9/+H/AAADAAIAAAD9/+D/AAADAAIAAAD9/9//AAADAAIAAAD9/97/AAADAAIAAAD9/93/AAAEAAAAAAD4/+L/AAADAAEAAAD4/+P/AAADAAIAAAD4/+T/AAADAAIAAAD4/+X/AAADAAIAAAD4/+b/AAADAAIAAAD4/+f/AAADAAIAAADt/+L/AAACAAEAAADt/+P/AAACAAIAAADt/+T/AAACAAIAAADt/+X/AAACAAIAAADt/+b/AAACAAIAAADt/+f/AAACAAIAAADl/+L/AAADAAIAAADl/+P/AAADAAIAAADl/+T/AAADAAIAAADl/+X/AAADAAIAAADl/+b/AAADAAIAAADl/+f/AAADAAIAAADl/+j/AAADAAIAAADl/+n/AAADAAIAAADl/+r/AAADAAIAAADl/+v/AAADAAIAAADk/+v/AAABAAIAAADk/+z/AAABAAIAAADk/+3/AAABAAIAAADk/+7/AAABAAIAAADk/+//AAABAAIAAADk//D/AAABAAIAAADk//H/AAABAAIAAADk//L/AAABAAIAAADk//P/AAABAAIAAADl/+z/AAADAAIAAADl/+3/AAADAAIAAADl/+7/AAADAAIAAADl/+//AAADAAIAAADl//D/AAADAAIAAADl//H/AAADAAIAAADl//L/AAADAAIAAADl//P/AAADAAIAAADl//T/AAADAAIAAADl//X/AAADAAIAAADl//b/AAADAAIAAADl//f/AAADAAIAAADl//j/AAADAAIAAADl//n/AAADAAIAAADl//r/AAADAAIAAADl//v/AAADAAIAAADl//z/AAADAAIAAADl//3/AAAEAAEAAADl//7/AAACAAIAAADl////AAACAAIAAADl/wAAAAACAAIAAADl/wEAAAACAAMAAADl/wgAAAACAAIAAADl/wkAAAACAAIAAADl/woAAAACAAIAAAD3/wEAAAACAAMAAAD8/wEAAAADAAMAAAD7/wEAAAACAAMAAAD6/wEAAAACAAMAAAD5/wEAAAACAAMAAAD4/wEAAAACAAMAAAADAAEAAAABAAIAAAADAAIAAAABAAIAAAAEAAIAAAACAAIAAAAFAAIAAAACAAMAAAAFAAEAAAACAAIAAAAGAAEAAAACAAIAAAAHAAEAAAACAAIAAAAIAAEAAAADAAIAAAAIAAIAAAADAAMAAAAHAAIAAAACAAMAAAAGAAIAAAACAAMAAAAEAAEAAAACAAIAAAADAAMAAAABAAIAAAADAAQAAAABAAIAAAADAAUAAAABAAIAAAADAAYAAAAFAAEAAAADAAcAAAACAAMAAAAEAAcAAAADAAMAAAAEAAYAAAADAAIAAAAEAAUAAAADAAIAAAAEAAQAAAADAAIAAAAEAAMAAAADAAIAAAD9/wYAAAACAAEAAAD+/wYAAAACAAEAAAD//wYAAAACAAEAAAAAAAYAAAACAAEAAAABAAYAAAACAAEAAAACAAYAAAACAAEAAAACAAcAAAACAAMAAAABAAcAAAACAAMAAAAAAAcAAAACAAMAAAD//wcAAAACAAMAAAD+/wcAAAACAAMAAAD9/wcAAAACAAMAAAD8/wcAAAACAAIAAAD7/wcAAAACAAIAAAD7/wYAAAACAAEAAAD8/wYAAAACAAEAAAD2/wEAAAACAAMAAAD2/wAAAAACAAIAAAD7/wgAAAACAAIAAAD7/wkAAAACAAIAAAD7/woAAAACAAIAAAD1/wAAAAACAAIAAAD1/wEAAAACAAMAAADl/wsAAAACAAIAAADl/w0AAAACAAMAAADm/w0AAAACAAMAAADn/w0AAAACAAMAAADo/w0AAAACAAMAAADq/w0AAAACAAMAAADp/w0AAAACAAMAAADr/w0AAAACAAMAAADt/w0AAAACAAMAAADs/w0AAAACAAMAAADu/w0AAAACAAMAAADv/w0AAAACAAMAAADw/w0AAAACAAMAAADw/wwAAAACAAIAAADx/wwAAAACAAIAAADx/w0AAAACAAMAAAD7/wsAAAACAAIAAAD8/wsAAAADAAIAAAD8/woAAAADAAIAAAD8/wkAAAADAAIAAAD8/wgAAAADAAIAAADl/wwAAAACAAIAAADo/97/AAACAAMAAADo/93/AAACAAEAAADn/97/AAACAAMAAADn/93/AAACAAEAAADm/93/AAACAAEAAADm/97/AAACAAMAAADl/97/AAACAAIAAADl/93/AAACAAEAAADl/9//AAADAAIAAADl/+D/AAADAAIAAADl/+H/AAADAAIAAADk/+L/AAABAAIAAADk/+P/AAABAAIAAADk/+H/AAABAAIAAADk/+D/AAABAAIAAADk/9//AAABAAIAAADk/97/AAABAAIAAADk/93/AAABAAEAAADk/+T/AAABAAIAAADk/+X/AAABAAIAAADk/+b/AAABAAIAAADk/+n/AAABAAIAAADk/+r/AAABAAIAAADk/+j/AAABAAIAAADk/+f/AAABAAIAAADk//T/AAABAAIAAADk//X/AAABAAIAAADk//b/AAABAAIAAADk//f/AAABAAIAAADk//j/AAABAAIAAADk//n/AAABAAIAAADk//r/AAABAAIAAADk//v/AAABAAIAAADk//z/AAABAAIAAADk//3/AAAFAAEAAADk//7/AAACAAIAAADk////AAACAAIAAADk/wAAAAACAAIAAADk/wEAAAACAAMAAADk/w0AAAACAAMAAADk/wwAAAACAAIAAADk/wsAAAACAAIAAADk/woAAAACAAIAAADk/wkAAAACAAIAAADk/wgAAAACAAIAAADq/+r/AAABAAIAAADq/+v/AAABAAIAAADq/+z/AAABAAIAAADq/+3/AAABAAIAAADq/+7/AAABAAIAAADq/+//AAABAAMAAADq//T/AAAFAAAAAADq//X/AAABAAIAAADq//b/AAABAAIAAADq//f/AAACAAIAAADq//j/AAABAAIAAADq//n/AAABAAIAAADq//r/AAABAAIAAADq//v/AAABAAIAAADq//z/AAABAAIAAADq//3/AAAFAAEAAADq//7/AAACAAIAAADq////AAACAAIAAADq/wAAAAACAAIAAADq/wEAAAABAAMAAADv/wwAAAACAAIAAADt/wwAAAACAAIAAADu/wwAAAACAAIAAADs/wwAAAACAAIAAADr/wwAAAACAAIAAADq/wwAAAACAAIAAADp/wwAAAACAAIAAADo/wwAAAACAAIAAADn/wwAAAACAAIAAADm/wwAAAACAAIAAADr/wEAAAADAAIAAADr/wAAAAACAAIAAADr////AAACAAIAAADr//7/AAACAAIAAADr//3/AAACAAIAAADr//r/AAADAAIAAADr//n/AAACAAIAAADr//j/AAACAAIAAADr//f/AAACAAIAAADr//z/AAACAAIAAADr//v/AAACAAIAAADr/+r/AAACAAIAAADr/+v/AAACAAIAAADr/+z/AAACAAIAAADr/+3/AAACAAIAAADr/+7/AAACAAIAAADr/+//AAACAAMAAADr//b/AAACAAIAAADr//X/AAACAAIAAADr//T/AAACAAEAAADy/wwAAAACAAIAAADz/wwAAAACAAIAAAD0/wwAAAACAAIAAAD1/wwAAAACAAIAAAD2/wwAAAACAAIAAAD3/wwAAAACAAIAAAD4/wwAAAACAAIAAAD5/wwAAAACAAIAAAD6/wwAAAACAAIAAAD7/wwAAAACAAIAAAD8/wwAAAADAAIAAAD8/w0AAAADAAMAAAD7/w0AAAACAAMAAAD6/w0AAAACAAMAAAD5/w0AAAACAAMAAAD4/w0AAAACAAMAAAD3/w0AAAACAAMAAAD2/w0AAAACAAMAAAD1/w0AAAACAAMAAAD0/w0AAAACAAMAAADz/w0AAAACAAMAAADy/w0AAAACAAMAAAD1/woAAAACAAIAAAD1/wsAAAACAAIAAAD2/woAAAACAAIAAAD3/woAAAACAAIAAAD4/woAAAACAAIAAAD5/woAAAACAAIAAAD6/woAAAACAAIAAAD6/wsAAAACAAIAAAD5/wsAAAACAAIAAAD4/wsAAAACAAIAAAD3/wsAAAACAAIAAAD2/wsAAAACAAIAAADp/wcAAAACAAIAAADp/wYAAAACAAEAAAD0/woAAAACAAIAAADz/woAAAACAAIAAADy/woAAAACAAIAAADx/woAAAACAAIAAADw/woAAAACAAIAAADx/wsAAAACAAIAAADy/wsAAAACAAIAAADz/wsAAAACAAIAAAD0/wsAAAACAAIAAAD6/wgAAAACAAIAAAD6/wkAAAACAAIAAAD5/wkAAAACAAIAAAD4/wkAAAACAAIAAAD3/wkAAAACAAIAAAD2/wkAAAACAAIAAAD1/wkAAAACAAIAAAD0/wkAAAACAAIAAADz/wkAAAACAAIAAADy/wkAAAACAAIAAADx/wkAAAACAAIAAAD3/wgAAAACAAIAAAD4/wgAAAACAAIAAAD5/wgAAAACAAIAAAD6/wYAAAACAAEAAAD6/wcAAAACAAIAAAD5/wcAAAACAAIAAAD5/wYAAAACAAEAAAD3/wYAAAACAAEAAAD3/wcAAAACAAIAAAD4/wcAAAACAAIAAAD4/wYAAAACAAEAAADv/woAAAACAAIAAADu/woAAAACAAIAAADt/woAAAACAAIAAADs/woAAAACAAIAAADr/woAAAACAAIAAADq/woAAAACAAIAAADp/woAAAACAAIAAADp/wkAAAACAAIAAADp/wgAAAACAAIAAAD0/wEAAAACAAMAAADz/wEAAAACAAMAAADu/wEAAAACAAMAAADt/wEAAAACAAMAAADs/wEAAAABAAMAAADs/wAAAAACAAIAAADt/wAAAAACAAIAAADu/wAAAAACAAIAAADz/wAAAAAFAAEAAAD0/wAAAAACAAIAAAD2////AAACAAIAAAD1////AAACAAIAAAD0////AAACAAIAAADz////AAABAAIAAADv////AAADAAIAAADu////AAACAAIAAADt////AAACAAIAAADs////AAACAAIAAAD1//7/AAACAAIAAAD2//7/AAACAAIAAAD0//7/AAACAAIAAADz//7/AAABAAIAAADv//7/AAADAAIAAADu//7/AAACAAIAAADt//7/AAACAAIAAADs//7/AAACAAIAAADs//3/AAACAAIAAADt//3/AAACAAIAAADu//3/AAACAAIAAADv//3/AAADAAIAAADz//3/AAABAAIAAAD0//3/AAACAAIAAAD1//3/AAACAAIAAAD2//3/AAACAAIAAADs//z/AAACAAIAAADt//z/AAACAAIAAADu//v/AAACAAIAAADv//v/AAADAAIAAADz//z/AAABAAIAAAD0//z/AAACAAIAAAD1//z/AAACAAIAAAD2//z/AAACAAIAAAD2//v/AAACAAIAAAD1//v/AAACAAIAAAD0//r/AAACAAIAAADz//r/AAABAAIAAADv//r/AAADAAIAAADu//r/AAACAAIAAADt//r/AAACAAIAAADs//r/AAABAAIAAAD1//r/AAACAAIAAAD2//r/AAACAAIAAAD0//v/AAACAAIAAADz//v/AAABAAIAAADt//v/AAACAAIAAADu//z/AAACAAIAAADv//z/AAADAAIAAADs//v/AAACAAIAAADn/wgAAAACAAIAAADo/wgAAAACAAIAAADp/wsAAAACAAIAAADq/wsAAAACAAIAAADr/wsAAAACAAIAAADs/wsAAAACAAIAAADt/wsAAAACAAIAAADu/wsAAAACAAIAAADv/wsAAAACAAIAAADw/wsAAAACAAIAAADo/wsAAAACAAIAAADn/wsAAAACAAIAAADm/woAAAACAAIAAADm/wkAAAACAAIAAADm/wgAAAACAAIAAADn/woAAAACAAIAAADo/woAAAACAAIAAADo/wkAAAACAAIAAADn/wkAAAACAAIAAADm/wsAAAACAAIAAADp/wEAAAADAAMAAADo/wEAAAACAAMAAADn/wEAAAACAAMAAADm/wEAAAACAAMAAADj/wEAAAACAAIAAADj/wAAAAACAAIAAADj/wgAAAACAAIAAADj/wkAAAACAAIAAADj/woAAAACAAIAAADj/w0AAAACAAMAAADj/wwAAAACAAIAAADj/wsAAAACAAIAAADi/w0AAAACAAMAAADi/wwAAAACAAIAAADi/wsAAAACAAIAAADi/woAAAACAAIAAADi/wkAAAACAAIAAADi/wgAAAACAAIAAADh/wcAAAABAAIAAADh/wYAAAABAAIAAADh/wUAAAABAAIAAADh/wQAAAABAAIAAADh/wMAAAABAAIAAADh/wIAAAABAAIAAADh/wEAAAABAAIAAADi/wEAAAACAAIAAADi/wAAAAACAAIAAADi////AAACAAIAAADi//7/AAACAAIAAADi/wIAAAACAAIAAADi/wMAAAACAAIAAADi/wQAAAACAAIAAADi/wUAAAADAAIAAADi/wYAAAAEAAEAAADj////AAACAAIAAADj//7/AAACAAIAAADh/wgAAAABAAIAAADh/wAAAAABAAIAAADh////AAABAAIAAADh//7/AAABAAIAAADh/wkAAAABAAIAAADh/woAAAABAAIAAADh/wsAAAABAAIAAADh/wwAAAABAAIAAADh/w0AAAABAAMAAADp/wAAAAACAAIAAADo/wAAAAACAAIAAADn/wAAAAACAAIAAADm/wAAAAACAAIAAADn////AAACAAIAAADo////AAACAAIAAADp////AAACAAIAAADm////AAACAAIAAADm//7/AAACAAIAAADn//7/AAACAAIAAADo//7/AAACAAIAAADp//7/AAACAAIAAADj//3/AAACAAEAAADi//3/AAACAAEAAADh//3/AAAFAAAAAADm//3/AAACAAEAAADn//3/AAACAAEAAADo//3/AAACAAEAAADp//3/AAACAAEAAADq/wkAAAACAAIAAADr/wkAAAACAAIAAADs/wkAAAACAAIAAADt/wkAAAACAAIAAADu/wkAAAACAAIAAADv/wkAAAACAAIAAADw/wkAAAACAAIAAAD2/wYAAAACAAEAAAD2/wcAAAACAAIAAAD2/wgAAAACAAIAAAD1/wgAAAACAAIAAAD0/wgAAAACAAIAAADz/wgAAAACAAIAAADy/wgAAAACAAIAAADx/wgAAAACAAIAAADw/wgAAAACAAIAAADv/wgAAAACAAIAAADu/wgAAAACAAIAAADt/wgAAAACAAIAAADs/wgAAAACAAIAAADr/wgAAAACAAIAAADq/wgAAAACAAIAAADv/wAAAAAEAAEAAADv/wEAAAACAAMAAADv//n/AAADAAIAAADv//j/AAADAAIAAADv//f/AAADAAIAAADv//b/AAADAAIAAADv//X/AAADAAIAAADv//T/AAADAAEAAADv/+//AAACAAMAAADv/+7/AAACAAIAAADv/+3/AAACAAIAAADv/+z/AAACAAIAAADv/+v/AAACAAIAAADv/+r/AAACAAIAAADu/+r/AAACAAIAAADt/+r/AAACAAIAAADs/+r/AAACAAIAAADs/+v/AAACAAIAAADt/+v/AAACAAIAAADt/+z/AAACAAIAAADt/+3/AAACAAIAAADt/+7/AAACAAIAAADt/+//AAACAAMAAADu/+//AAACAAMAAADu/+7/AAACAAIAAADu/+3/AAACAAIAAADu/+z/AAACAAIAAADu/+v/AAACAAIAAADu//T/AAACAAEAAADu//X/AAACAAIAAADu//b/AAACAAIAAADu//f/AAACAAIAAADu//j/AAACAAIAAADu//n/AAACAAIAAADt//n/AAACAAIAAADs//n/AAACAAIAAADs//j/AAACAAIAAADs//f/AAACAAIAAADs//b/AAACAAIAAADs//X/AAACAAIAAADs//T/AAACAAEAAADs/+//AAACAAMAAADs/+7/AAACAAIAAADs/+z/AAACAAIAAADt//T/AAACAAEAAADt//X/AAACAAIAAADt//b/AAACAAIAAADt//f/AAACAAIAAADt//j/AAACAAIAAADs/+3/AAACAAIAAADw/+//AAACAAMAAADx/+//AAACAAMAAADy/+//AAACAAIAAADy/+7/AAACAAIAAADx/+7/AAACAAIAAADw/+7/AAACAAIAAADw/+j/AAABAAIAAADx/+j/AAACAAIAAADy/+j/AAACAAIAAADy/+v/AAACAAIAAADy/+z/AAACAAIAAADy/+3/AAACAAIAAADx/+3/AAACAAIAAADw/+3/AAACAAIAAADw/+z/AAACAAIAAADw/+r/AAACAAIAAADw/+n/AAACAAIAAADx/+n/AAACAAIAAADy/+n/AAACAAIAAADy/+r/AAACAAIAAADx/+v/AAACAAIAAADx/+r/AAACAAIAAADx/+z/AAACAAIAAADw/+v/AAACAAIAAADu/+L/AAACAAEAAADv/+L/AAACAAEAAADw/+L/AAACAAEAAADx/+L/AAACAAEAAADy/+L/AAACAAEAAADz/+L/AAACAAEAAAD0/+L/AAACAAEAAAD0/+b/AAACAAIAAAD0/+f/AAACAAIAAADz/+f/AAACAAIAAADy/+f/AAACAAIAAADx/+f/AAACAAIAAADw/+f/AAACAAIAAADw/+b/AAACAAIAAADv/+b/AAACAAIAAADu/+b/AAACAAIAAADu/+X/AAACAAIAAADv/+X/AAACAAIAAADv/+T/AAACAAIAAADv/+P/AAACAAIAAADu/+P/AAACAAIAAADu/+T/AAACAAIAAADu/+f/AAACAAIAAADv/+f/AAACAAIAAADx/+b/AAACAAIAAADy/+X/AAACAAIAAADy/+T/AAACAAIAAADy/+P/AAACAAIAAADx/+P/AAACAAIAAADw/+P/AAACAAIAAADw/+T/AAACAAIAAADx/+T/AAACAAIAAADz/+T/AAACAAIAAAD0/+T/AAACAAIAAAD0/+P/AAACAAIAAADz/+P/AAACAAIAAADx/+X/AAACAAIAAADy/+b/AAACAAIAAADz/+b/AAACAAIAAAD0/+X/AAACAAIAAADz/+X/AAACAAIAAADw/+X/AAACAAIAAADq/wcAAAACAAIAAADr/wcAAAACAAIAAADs/wcAAAACAAIAAADt/wcAAAACAAIAAADu/wcAAAACAAIAAADv/wcAAAACAAIAAADw/wcAAAACAAIAAADx/wcAAAACAAIAAADy/wcAAAACAAIAAADz/wcAAAACAAIAAAD0/wcAAAACAAIAAAD1/wcAAAACAAIAAAD1/wYAAAACAAEAAAD0/wYAAAACAAEAAADz/wYAAAACAAEAAADy/wYAAAACAAEAAADx/wYAAAACAAEAAADw/wYAAAACAAEAAADv/wYAAAACAAEAAADu/wYAAAACAAEAAADt/wYAAAACAAEAAADs/wYAAAACAAEAAADr/wYAAAACAAEAAADq/wYAAAACAAEAAADw/wEAAAACAAMAAADx/wEAAAADAAMAAADy/wEAAAABAAMAAADx/wAAAAAEAAAAAADw/wAAAAACAAEAAADy/wAAAAACAAEAAADi/wcAAAACAAIAAADo/wYAAAACAAEAAADn/wYAAAACAAEAAADm/wYAAAACAAEAAADl/wYAAAACAAEAAADk/wYAAAACAAEAAADj/wYAAAACAAEAAADj/wcAAAACAAIAAADk/wcAAAACAAIAAADl/wcAAAACAAIAAADm/wcAAAACAAIAAADn/wcAAAACAAIAAADo/wcAAAACAAIAAAD9/wEAAAACAAAAAAD+/wEAAAACAAAAAAD//wEAAAACAAAAAAAAAAEAAAACAAAAAAABAAEAAAACAAAAAAACAAEAAAACAAAAAAA=")
tile_set = ExtResource("1_7ohts")

[node name="Foreground" type="TileMapLayer" parent="."]
z_index = 3
tile_map_data = PackedByteArray("AADq/wsAAQAEAAEAAADr/wsAAQAFAAEAAADr/woAAQAEAAEAAADs/woAAQAFAAEAAADk/wUAAQAAAAEAAADl/wUAAQABAAEAAADm/wUAAQACAAEAAAA=")
tile_set = ExtResource("1_7ohts")

[node name="AntiGravity" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AntiGravity"]
position = Vector2(-110, 69)
shape = SubResource("RectangleShape2D_2ju3c")

[connection signal="body_entered" from="StartZone" to="." method="_on_start_zone_body_entered"]
[connection signal="body_entered" from="EndZone" to="." method="_on_end_zone_body_entered"]
[connection signal="body_entered" from="AntiGravity" to="." method="_on_anti_gravity_body_entered"]
[connection signal="body_exited" from="AntiGravity" to="." method="_on_anti_gravity_body_exited"]
